<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/cardView"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_56"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:text="@string/app_name"
			android:textColor="@color/black"
			android:textSize="@dimen/text_size_20"/>
	</com.google.android.material.card.MaterialCardView>

	<ImageView
		android:id="@+id/imageAvatar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_16"
		android:src="@mipmap/ic_launcher"
		app:layout_constraintTop_toBottomOf="@+id/cardView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<EditText
		android:id="@+id/editTextName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_16"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/hint_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintTop_toBottomOf="@+id/imageAvatar"/>
	<EditText
		android:id="@+id/editTextSecondName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/hint_second_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextName"/>

	<EditText
		android:id="@+id/editTextNumberOfPhone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:inputType="phone"
		android:ems="10"
		android:hint="@string/hint_number_of_phone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextSecondName"/>
	<EditText
		android:id="@+id/editTextImageUrl"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:inputType="text"
		android:ems="10"
		android:hint="@string/hint_photo_url"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfPhone"/>
	<Button
		android:id="@+id/buttonBack"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/back"
		app:layout_constraintTop_toBottomOf="@+id/editTextImageUrl"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias="0.522"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>