<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="16dp"
	android:layout_marginVertical="8dp"
	android:background="@color/white"
	android:elevation="@dimen/margin_10"
	app:cardCornerRadius="@dimen/margin_16">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="@dimen/dimen_100"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_8"
			android:src="@mipmap/ic_launcher"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center|end"
			android:layout_margin="@dimen/margin_10"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textName"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="@dimen/margin_10"
				android:text="@string/ivan"
				android:textColor="@color/black"
				android:textSize="14sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/textSecondName"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/ivanov"
				android:textColor="@color/black"
				android:textSize="14sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/textNumberOfPhone"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/number_phone"
				android:textColor="@color/black"
				android:textSize="14sp"
				android:textStyle="bold"/>
		</LinearLayout>
	</LinearLayout>
</androidx.cardview.widget.CardView>